Feature:Error responses do not echo the X-Request-Id the server already generates
